2010-01-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix configure of gled screwed up in last commit.

	* gled/Makefile:
	Fix the external paths passed to gled configure.
	Put back the creation of the external/ symlink.

2010-01-05  Matevz Tadel  <matevz.tadel@ijs.si>

	* gled/Makefile:
	Pass extra-paths from gled-builder configure to gled-build configure.

2010-01-02  Matevz Tadel  <matevz.tadel@ijs.si>

	* GledBuildExternal.pm:
	Use rsync option -t instead of -a when downloading a package.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for OSX build. Use GLEW from ROOT.

	* external/glew:
	* external/lcms:
	* external/attic/glew:
	* external/attic/lcms:
	Move glew and lcms to attic.
	GLEW from ROOT (or system) is used now.
	lcms was not being used / built.

	* external/Makefile:
	Remove glew from package list.

	* external/freealut/freealut.pl
	Use cmake build.

	* external/openal/openal.pl:
	Do not build for OSX - OpenAL is provided as framework.

2009-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* external/DevIL/DevIL.pl:
	* external/freealut/freealut.pl:
	Pass PREFIX escaped so that it only expands in final make invocation.

2009-12-24  Matevz Tadel  <matevz.tadel@ijs.si>

	Allow passing of XXXFLAGS to inferior configures.
	Improve build procedure -- less has to be written in package pl files.

	* configure.ac:
	If no CFLAGS, CXXFLAGS were passed, make sure they remain empty.
	Add EXTRA_PATHS config var to allow passing of additional
	installation directories to all sub-configures.

	* GledBuildConf.pm.in:
	* MakeBuildConf.inc.in:
	Set GB_XXXFLAGS variables to corresponding XXXFLAGS.
	Set EXTRA_PATHS variable.

	* GledBuildExternal.pm:
	Add handling of XXXFLAGS variables.
	Add functions add_xxxflags().
	Add function add_search_path().
	The configure target is now generated in a sophisticated way so
	that all XXXFLAGS get propagated if they are not empty.
	Special function target_configure() was added to perform this.

	* README: